# the-nomad-data-stack

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.claude/: settings.local.json
dags/: __init__.py  dw_catalog_dag.py  dw_config.yaml  dw_dags.py  dw_dags_backfill.py  dw_extractor.py  dw_extractor_dag.py  dw_finish_dag.py  dw_init_dag.py  dw_start_backfill_dag.py  dw_start_dag.py  extractor_dags.py  ingestion_dags.py  ods_loader_dag.py
docs/: architecture-notes.md  backfill-batch-mode.md  catalog.md  commit-protocol.md  conventions.md  lakehouse_core_api.md  refactor_lakehouse_core_checklist.md
flows/: __init__.py  dw_catalog_flow.py  dw_extractor_backfill_flow.py  dw_extractor_compact_flow.py  dw_extractor_flow.py  dw_finish_flow.py  dw_init_flow.py  dw_layer_flow.py  dw_start_flow.py  prefect.yaml  register_dw_layer_deployments.py
freezegun/: __init__.py
infra_build/: requirements.txt
lakehouse_core/: ARCHITECTURE.md  __init__.py  api.py  catalog.py  catalog_migrations.py  catalog_sql.py  commit.py  dw_config.py  dw_planner.py  errors.py  execution.py  input_views.py  manifest.py  models.py  observability.py  ods_sources.py  paths.py  planning.py  storage.py  stores.py  time.py  uri.py  validate.py
notebooks/: demo.ipynb  demo_query_utils.ipynb  query_utils.py
prefect/: prefect.yaml
scripts/: __init__.py  check_imports.py  duckdb_catalog_migrate.py  duckdb_catalog_refresh.py  prefect_deploy.sh  run_dw.py  run_ingestion.py  validate_duckdb_catalog.py  validate_duckdb_catalog_migrations.py  validate_ingestion_runner.py
tests/: conftest.py
(+251 files in other folders)
