[project]
name = "the-nomad-data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-amazon>=9.18.1",
]
